--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,10 @@ nixPkgs = ["php81", "composer", "nodejs_20"]
 cmds = [
   "composer install --ignore-platform-reqs --no-dev --optimize-autoloader",
   "npm install",
-  "npm run prod"
+  "npm run build",
+  "php artisan config:cache",
+  "php artisan route:cache",
+  "php artisan view:cache"
 ]
 
 [phases.start]
